--- a/interface.html
+++ b/interface.html
@@ -4,9 +4,9 @@
         <title>Interface</title>
     </head>
     <body>
-        <div class="query_container">
-            <form id="form_container">
-                <textarea id="querybox" placeholder="Ask for advice..." style="width: 100%;"></textarea>
+        <div class="form_container">
+            <form id="form">
+                <textarea id="user_input" placeholder="Ask for advice..." style="width: 100%;" required></textarea>
                 <input id="submit_button" type="submit">
             </form>
         </div>
@@ -14,5 +14,31 @@
         <div class="response_container">
             <p id="responsebox"></p>
         </div>
+
+        <script>
+            document.getElementById('form').addEventListener('submit', async function sendPrompt() {
+                const form = document.getElementById('user_input');
+                const prompt = form.value;
+
+                document.getElementById("submit_button").value = "Sending...";
+
+                const response = await fetch("http://localhost:5000/generate", { // Local testing for now!
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({ prompt }) // Formats the query data into JSON. Compatible with HTML to Python APIs
+                });
+
+                const data = await response.json();
+                document.getElementById("response").innerText = data.generated_text || JSON.stringify(data);
+            })
+
+            if (response.ok) {
+                alert('Success!');
+                document.getElementById("send_button").value = "Send";
+                location.reload();
+            }
+        </script>
     </body>
 </html>
