--- a/interface.html
+++ b/interface.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Interface</title>
+        <title>Dadvice AI Web Interface</title>
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
         <div class="form_container">
@@ -12,7 +13,7 @@
         </div>
 
         <div class="response_container">
-            <p id="responsebox"></p>
+            <p id="responsebox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
         <!-- Script that sends textarea input on form submit -->
